--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
                 "autoprefixer": "^10.4.2",
                 "postcss": "^8.4.6",
                 "snowpack": "^3.8.6",
+                "tailwind-scrollbar": "^1.3.1",
                 "tailwindcss": "^3.0.22"
         }
 }
