--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
         "scripts": {
-                "start": "snowpack dev"
+                "start": "snowpack dev",
+                "build": "snowpack build"
         },
         "dependencies": {
                 "@heroicons/react": "^1.0.5",
